# remez-exchange

./: .clang-format  .gitignore  CMakeLists.txt  README.md  remez.c  remez.h
include/remez/: remez.h
src/: remez.c
tests/: CMakeLists.txt  remez_test.cpp
